--- a/src/app/pages/contact/contact.html
+++ b/src/app/pages/contact/contact.html
@@ -1,1 +1,125 @@
-<p>contact works!</p>
+<section class="inner-banner">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="inner-baner-dtl position-relative text-center">
+                    <!-- Banner Image -->
+                    <img [src]="'assets/images/contact-us.png'" class="w-100 img-fluid rounded-5" />
+                    <div class="inner-heading">
+                        <h2>Contact Us</h2>
+                        <ul class="breadcumb d-flex justify-content-center align-items-center gap-3">
+                            <li><a routerLink="/">Home</a></li>
+                            <li><img [src]="'assets/images/breadcumb.svg'" /></li>
+                            <li><a routerLink="/">Contact Us</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="contact-detail ptc-80">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-9">
+                <div class="main-head text-center mbc-50">
+                    <h2>Contact Us</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy text ever since the 1500s, when an unknown printer</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="contact-inner d-flex align-items-center">
+                    <img [src]="'assets/images/call.svg'" />
+                    <div class="contact-info">
+                        <h5>Call Now</h5>
+                        <p class="mb-0">+91 98XXX XXX25</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="contact-inner d-flex align-items-center">
+                    <img [src]="'assets/images/email.svg'" />
+                    <div class="contact-info">
+                        <h5>Send Email</h5>
+                        <p class="mb-0">example85@gmail.com</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="contact-inner d-flex align-items-center">
+                    <img [src]="'assets/images/location-contact.svg'" />
+                    <div class="contact-info">
+                        <h5>Address</h5>
+                        <p class="mb-0">85/4, lorem, Ipsum is simply dummy text</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="contact-form ptc-60">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <img [src]="'assets/images/contact-form.png'" class="img-fluid w-100 rounded-4" />
+            </div>
+            <div class="col-md-6">
+                <div class="contact-form-inner">
+                    <h5>Get in touch with us</h5>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy.</p>
+                    <form>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="mb-3">
+                                    <input type="text" class="form-control" placeholder="First Name">
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="mb-3">
+                                    <input type="text" class="form-control" placeholder="Last Name">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="mb-3">
+                                    <input type="email" class="form-control" placeholder="Enter Email Id">
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="mb-3">
+                                    <input type="number" class="form-control" placeholder="Enter Mobile Number">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <select class="form-select" aria-label="Default select example">
+                                <option selected>Department</option>
+                                <option value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                                placeholder="Enter Your Query"></textarea>
+                        </div>
+                        <div class="mb-3">
+                            <a href="#" class="btn-default">Send <i class="fa-solid fa-arrow-up"></i></a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="contact-map ptc-80">
+    <div class="container">
+        <div class="col-md-12">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14717.094017012312!2d75.88652043885348!3d22.755229057468668!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396302af403406fb%3A0x5b50834b117f8bab!2sVijay%20Nagar%2C%20Scheme%20No%2054%2C%20Indore%2C%20Madhya%20Pradesh%20452010!5e0!3m2!1sen!2sin!4v1758971607856!5m2!1sen!2sin" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </div>
+</section>
