--- a/src/app/pages/treatments/treatments.html
+++ b/src/app/pages/treatments/treatments.html
@@ -69,7 +69,10 @@
                             </div>
                         </div>
                         <div class="read-more">
-                            <a hre class="btn">More Detail <i class="fa fa-arrow-up"></i></a>
+                            <!-- <a hre class="btn">More Detail <i class="fa fa-arrow-up"></i></a> -->
+                             <a *ngIf="t.id" [attr.href]="'/treatment-detail/' + t.id" class="btn">
+                                More Detail <i class="fa fa-arrow-up"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
