--- a/src/app/shared/components/header/header.html
+++ b/src/app/shared/components/header/header.html
@@ -39,14 +39,14 @@
           <a class="nav-link" routerLink="/doctors" routerLinkActive="active">Our Doctors</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="#" routerLinkActive="active">Articles</a>
+          <a class="nav-link" routerLink="/blog" routerLinkActive="active">Articles</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/contact" routerLinkActive="active">Contact Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/contact" routerLinkActive="active" class="btn-default login-btn ms-2"><i
-              class="fa-regular fa-circle-user"></i> Login</a>
+          <a class="nav-link" routerLink="/login" routerLinkActive="active" class="btn-default login-btn ms-2"><i
+              class="ms-0 fa-regular fa-circle-user"></i> Login</a>
         </li>
       </ul>
     </div>
