--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -1,21 +1,24 @@
-.ptc-80
-{
+.ptc-80 {
     padding-top: 80px;
 }
-.ptc-60
-{
+
+.mtc-80 {
+    margin-top: 80px;
+}
+
+.ptc-60 {
     padding-top: 60px;
 }
-.mbc-40
-{
+
+.mbc-40 {
     margin-bottom: 40px;
 }
-.mbc-50
-{
+
+.mbc-50 {
     margin-bottom: 50px;
 }
-.btn-default
-{
+
+.btn-default {
     background-color: var(--primary-color);
     font-family: var(--primary-font);
     border-radius: 50px;
@@ -27,34 +30,34 @@
     transition: all 0.5s;
     transform: perspective(1px) translateZ(0);
 }
-.btn-default:hover
-{
+
+.btn-default:hover {
     background-color: transparent;
     color: #0E99FF;
     border: 1.5px solid #0E99FF;
     text-decoration: none;
 }
-.login-btn
-{
+
+.login-btn {
     padding: 10px 22px;
     font-size: 14px;
 }
-.banner-offer
-{
+
+.banner-offer {
     text-align: center;
     background-color: #F6FBFF;
     padding: 30px 50px;
     border-radius: 15px;
 }
-.inner-baner-dtl img.banner-img
-{
+
+.inner-baner-dtl img.banner-img {
     max-height: 390px;
     object-fit: cover;
     object-position: center;
     min-height: 390px;
 }
-.banner-offer p
-{
+
+.banner-offer p {
     color: var(--secondary-color);
     font-family: var(--secondary-font);
     font-size: 18px;
@@ -62,62 +65,62 @@
     margin-bottom: 0px;
     line-height: 23px;
 }
-.banner-offer img
-{
+
+.banner-offer img {
     width: 75px;
     margin-bottom: 15px;
 }
-.about-details h2
-{
+
+.about-details h2 {
     color: var(--secondary-color);
     font-family: var(--primary-font);
     font-size: 36px;
 }
-.about-details p
-{
+
+.about-details p {
     color: var(--info-color);
 }
-.about-details
-{
+
+.about-details {
     padding-left: 20px;
 }
-.about-details .btn-default
-{
+
+.about-details .btn-default {
     margin-top: 15px;
     display: block;
     width: fit-content;
     padding: 13px 25px;
 }
-.btn-default i
-{
+
+.btn-default i {
     margin-left: 10px;
     transform: rotate(45deg);
     transition: all 0.5s;
 }
-.btn-default:hover i
-{
+
+.btn-default:hover i {
     transform: rotate(90);
     transform: rotate(90deg);
 }
-.main-head h2
-{
+
+.main-head h2 {
     font-family: var(--primary-font);
     color: var(--secondary-color);
     font-size: 36px;
 }
-.main-head p
-{
+
+.main-head p {
     color: var(--info-color);
     font-size: 16px;
 }
-.offer-info h4
-{
+
+.offer-info h4 {
     color: var(--secondary-color);
     font-family: var(--primary-font);
     font-size: 24px;
 }
-.offer-info
-{
+
+.offer-info {
     background: linear-gradient(#f0f7fd00, #F0F7FD);
     position: absolute;
     width: 100%;
@@ -129,180 +132,181 @@
     flex-direction: column;
     justify-content: end;
 }
-.offer-tag span.badge
-{
+
+.offer-tag span.badge {
     background-color: #424B62;
     border-radius: 50px;
     font-weight: 400;
     padding: 6px 10px;
 }
-.offer-tag
-{
+
+.offer-tag {
     display: flex;
     gap: 8px;
 }
-.offer-box a.offer-detail-btn
-{
+
+.offer-box a.offer-detail-btn {
     top: 10px;
     right: 10px;
     position: absolute;
 }
-.offer-box a.offer-detail-btn img
-{
+
+.offer-box a.offer-detail-btn img {
     width: 28px;
 }
-.packages-head h2
-{  
+
+.packages-head h2 {
     font-family: var(--primary-font);
     color: var(--secondary-color);
-    font-size:  36px;
+    font-size: 36px;
 }
-.packages-head a.btn-default
-{
+
+.packages-head a.btn-default {
     padding: 8px 20px;
 }
-.package-title h5
-{
+
+.package-title h5 {
     font-family: 'Lexend-Regular';
     color: var(--secondary-color);
     font-size: 20px;
 }
-.package-title img
-{
+
+.package-title img {
     width: 40px;
     margin-right: 10px;
 }
-.package-title p
-{
+
+.package-title p {
     color: var(--info-color);
     font-size: 16px;
 }
-.package-title
-{
+
+.package-title {
     margin-bottom: 10px;
 }
-.package-box
-{
+
+.package-box {
     border: 1px solid #D9D9D9;
     padding: 15px;
     border-radius: 15px;
     transition: all 0.5s;
     margin: 10px 0px;
 }
-.package-box a
-{
+
+.package-box a {
     position: absolute;
     top: 10px;
     right: 10px;
     transform: rotate(0deg);
     transition: all 0.5s;
 }
-.package-box:hover a
-{
+
+.package-box:hover a {
     transform: rotate(45deg);
     transition: all 0.5s;
 }
-.package-box:hover
-{
+
+.package-box:hover {
     box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
 }
-.package-box p
-{
+
+.package-box p {
     font-size: 14px;
 }
-.package-box a img
-{
+
+.package-box a img {
     width: 30px;
 }
-.info-detail h4
-{
+
+.info-detail h4 {
     color: var(--secondary-color);
     font-family: var(--primary-font);
     font-size: 28px;
 }
-.info-detail p
-{
+
+.info-detail p {
     color: var(--info-color);
 }
-.web-info .counter h1
-{
+
+.web-info .counter h1 {
     font-size: 36px;
     color: var(--secondary-color);
     font-family: var(--primary-font);
 }
-.web-info .counter p
-{
+
+.web-info .counter p {
     color: var(--info-color);
     font-family: 'Lexend-Regular';
     font-size: 14px;
 }
-.counter
-{
+
+.counter {
     gap: 18px;
 }
-.counters-main
-{
+
+.counters-main {
     gap: 50px;
 }
-.counter img
-{
+
+.counter img {
     width: 65px;
 }
-.info-detail
-{
+
+.info-detail {
     padding: 25px;
     border-radius: 20px;
     background-color: #F6FBFF;
 }
+
 /* Fix extra scroll issue */
 .owl-carousel {
-  width: 100% !important;
-  overflow: hidden;
+    width: 100% !important;
+    overflow: hidden;
 }
-.feedback-card img
-{
+
+.feedback-card img {
     width: 130px !important;
     margin-bottom: 15px;
 }
-.feedback-card p
-{
+
+.feedback-card p {
     color: var(--info-color);
     font-size: 14px;
 }
-.feedback-profile img
-{
+
+.feedback-profile img {
     width: 48px !important;
     margin-bottom: 0px;
 }
-.feedback-profile h6
-{
+
+.feedback-profile h6 {
     font-size: 16px;
     margin-bottom: 0px;
     margin-left: 12px;
 }
-.feedback-card
-{
+
+.feedback-card {
     padding: 20px;
     border-radius: 15px;
     border: 1px solid #E7E9EB;
 }
-.card-price span.onward-price
-{
+
+.card-price span.onward-price {
     color: #0e99ff;
 }
-.inner-baner-dtl ul.breadcumb li a
-{
+
+.inner-baner-dtl ul.breadcumb li a {
     color: #fff;
     font-size: 18px;
     text-decoration: none;
 }
-.inner-baner-dtl ul.breadcumb li
-{
+
+.inner-baner-dtl ul.breadcumb li {
     list-style: none;
     display: inline-block;
 }
-.inner-heading
-{
+
+.inner-heading {
     top: 0;
     bottom: 0;
     position: absolute;
@@ -313,15 +317,15 @@
     flex-direction: column;
     justify-content: center;
 }
-.inner-heading h2
-{
+
+.inner-heading h2 {
     color: #fff;
     font-family: "Raleway", sans-serif;
     font-weight: 600;
     font-size: 48px;
 }
-.user-card
-{
+
+.user-card {
     background: #F6FBFF;
     border-radius: 15px;
     overflow: hidden;
@@ -330,12 +334,12 @@
     border: 1px solid #D2D2D2;
     padding: 7px;
 }
-.user-card-description
-{
+
+.user-card-description {
     min-height: 42px;
 }
-.user-card-description p
-{
+
+.user-card-description p {
     color: #34363D;
     font-size: 15px;
     line-height: 1.4;
@@ -346,6 +350,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
 .user-card-content {
     padding: 15px 10px 5px 10px;
 }
@@ -359,8 +364,9 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
 .user-card-img {
-    height: 190px;
+    height: 200px;
     overflow: hidden;
 }
 
@@ -368,93 +374,94 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: top;
     border-radius: 15px;
 }
-.card-location img
-{
+
+.card-location img {
     width: 28px;
     margin-right: 10px;
 }
-.user-card-location
-{
+
+.user-card-location {
     color: #34363D;
     font-size: 0.9rem;
     margin-bottom: 10px;
     font-weight: 400;
 }
-.treatment-price
-{
+
+.treatment-price {
     color: #0E99FF;
     font-size: 18px;
     margin: 8px 0px;
     font-family: 'OpenSans-SemiBold';
 }
-.treatment-price strong
-{
+
+.treatment-price strong {
     color: var(--secondary-color);
 }
+
 .login-btn i,
-.login-btn:hover i
-{
+.login-btn:hover i {
     transform: rotate(0deg);
 }
-.user-card .read-more a
-{
+
+.user-card .read-more a {
     color: var(--primary-color);
     font-family: var(--primary-font);
     transition: all 0.5s;
     border: none;
     outline: none;
 }
-.read-more a.btn i
-{
+
+.read-more a.btn i {
     margin-left: 6px;
     transform: rotate(45deg);
     transition: all 0.5s;
 }
-.read-more a.btn:hover i
-{
+
+.read-more a.btn:hover i {
     transform: rotate(90deg);
 }
-.detail-image img
-{
-    border-radius: 15px;   
+
+.detail-image img {
+    border-radius: 15px;
 }
-.dtl-info h2
-{
+
+.dtl-info h2 {
     font-family: var(--primary-font);
     color: var(--secondary-color);
     font-size: 32px;
     margin-bottom: 10px;
 }
-.dtl-info
-{
+
+.dtl-info {
     padding-left: 20px;
 }
-.dtl-head
-{
+
+.dtl-head h2 {
     font-family: var(--primary-font);
     color: var(--secondary-color);
-    font-size: 25px;
+    font-size: 28px;
 }
-.user-card-rating
-{
+
+.user-card-rating {
     gap: 3px;
     margin: 10px 0px;
 }
-.faq-head p
-{
+
+.faq-head p {
     margin-bottom: 6px;
     color: var(--primary-color);
 }
-.faq-head h4
-{
+
+.faq-head h4 {
     font-size: 34px;
     font-family: var(--primary-font);
     color: var(--secondary-color);
 }
-.accordion-main h2 button
-{
+
+.accordion-main h2 button {
     color: var(--info-color);
     font-family: 'Lexend-Regular';
     border: none;
@@ -463,91 +470,91 @@
     border-radius: 0px !important;
     border-bottom: 1px solid #000;
 }
-.accordion-main h2 button:focus
-{
+
+.accordion-main h2 button:focus {
     box-shadow: none;
 }
-.accordion-main .accordion-item
-{
+
+.accordion-main .accordion-item {
     border: none;
     margin-bottom: 15px;
 }
-.accordion-main .accordion-body
-{
+
+.accordion-main .accordion-body {
     padding: 10px !important;
     padding-bottom: 0px !important;
 }
-.accordion-main .accordion-button:not(.collapsed)
-{
+
+.accordion-main .accordion-button:not(.collapsed) {
     color: var(--info-color);
     background-color: transparent;
 }
-.accordion-main .accordion-body p
-{
+
+.accordion-main .accordion-body p {
     color: var(--info-color);
 }
-.dtl-doctor-head h4
-{
+
+.dtl-doctor-head h4 {
     font-size: 28px;
     font-family: var(--primary-font);
     color: var(--secondary-color);
 }
-.dtl-doctor-head a
-{
+
+.dtl-doctor-head a {
     font-size: 18px;
     text-decoration: underline;
     color: var(--primary-color);
 }
-.dtl-doctor-info p
-{
+
+.dtl-doctor-info p {
     font-size: 20px;
     font-weight: 500;
     margin-bottom: 3px;
     color: var(--secondary-color);
 }
-.dtl-doctor-info ul
-{
+
+.dtl-doctor-info ul {
     padding-left: 20px;
     margin-bottom: 0px;
 }
-.dtl-doctor-info ul li
-{
+
+.dtl-doctor-info ul li {
     font-size: 16px;
     color: var(--info-color);
 }
-.dtl-doctor-info
-{
+
+.dtl-doctor-info {
     padding-left: 25px;
 }
-.dtl-doctor-img img
-{
+
+.dtl-doctor-img img {
     max-width: 93px;
     border-radius: 8px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
 }
-.dtl-doctor-list
-{
+
+.dtl-doctor-list {
     padding: 25px 20px;
     border-bottom: 1px solid #989898;
 }
-.dtl-doctor-head
-{
+
+.dtl-doctor-head {
     padding: 0px 20px;
 }
-.detail-doctors
-{
+
+.detail-doctors {
     background-color: #F6FBFF;
     padding: 30px 0px;
     border-radius: 15px;
     margin-left: 25px;
 }
-.detail-doctors .dtl-doctor-list:last-child
-{
+
+.detail-doctors .dtl-doctor-list:last-child {
     padding-bottom: 0px;
     border-bottom: none;
 }
-.dtl-cta-action
-{
+
+.dtl-cta-action {
     position: absolute;
     left: 0;
     right: 0;
@@ -559,8 +566,8 @@
     justify-content: center;
     flex-flow: column;
 }
-.dtl-cta-action h2
-{
+
+.dtl-cta-action h2 {
     color: #fff;
     font-family: var(--primary-font);
     font-size: 38px;
@@ -568,21 +575,183 @@
     margin-bottom: 15px;
     font-weight: 500;
 }
-.dtl-cta-action a.btn-default
-{
+
+.dtl-cta-action a.btn-default {
     font-family: 'Lexend-Regular';
     padding: 13px 30px;
 }
-.detail-info
-{
+
+.detail-info {
     padding-top: 50px;
 }
-.dtl-features-list ul li:last-child
-{
+
+.dtl-features-list ul li:last-child {
     margin-bottom: 0px !important;
 }
-.dtl-center-image img
-{
+
+.dtl-center-image img {
     height: 300px;
     object-fit: cover;
+    object-position: top;
+}
+
+.blog-date p {
+    color: var(--info-color);
+}
+
+.blog-date img {
+    width: 22px;
+}
+
+.blog-card-dtl h4 {
+    font-size: 20px;
+    font-family: var(--primary-font);
+}
+
+.blog-card-dtl p {
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    /* Show only 4 lines */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    color: var(--info-color);
+}
+
+.blog-card-dtl {
+    padding: 20px;
+}
+
+.blog-date {
+    margin-bottom: 15px;
+}
+
+.blog-card {
+    border-radius: 15px;
+    box-shadow: rgb(99 99 99 / 12%) 0px 2px 8px 0px;
+}
+.blog-card
+{
+    margin-bottom: 30px;
+}
+.contact-inner
+{
+    box-shadow: rgb(99 99 99 / 12%) 0px 2px 8px 0px;
+    padding: 30px 40px;
+    justify-content: center;
+    height: 100%;
+    border-radius: 10px;
+}
+.contact-form-inner form input,
+.contact-form-inner form select,
+.contact-form-inner form textarea
+{
+    padding: 15px;
+    font-size: 14px;
+    color: #676767;
+    border: none;
+    box-shadow: none;
+    border: 1px solid #DDDDDD;
+}
+.contact-form-inner form input::placeholder
+{
+    color: #AEAEAE;
+}
+.contact-form-inner form select option
+{
+    color: #676767;
+}
+.contact-form-inner form label
+{
+    color: #AEAEAE;
+    font-size: 16px;
+}
+.contact-form-inner form .form-check input
+{
+    padding: 9px;
+    margin-right: 12px;
+}
+.contact-form-inner form input::placeholder,
+.contact-form-inner form textarea::placeholder
+{
+    color: #AEAEAE;
+}
+.contact-form-inner form select
+{
+    color: #AEAEAE;
+}
+.contact-form-inner h5
+{
+    font-size: 28px;
+    color: var(--secondary-color);
+    font-family: var(--primary-font);
+}
+.contact-form-inner p
+{
+    color: var(--info-color);
+}
+.contact-form-inner form
+{
+    margin-top: 30px;
+}
+.contact-form-inner form a.btn-default
+{
+    margin-top: 20px;
+    display: block;
+    width: fit-content;
+}
+.sing-option
+{
+    text-align: center;
+    margin-top: 30px;
+}
+.sing-option p
+{
+    color: var(--info-color);
+    font-size: 16px;
+}
+.sing-option p a
+{
+    color: var(--primary-color);
+    text-decoration: underline;
+}
+.contact-form.login-form .contact-form-inner
+{
+    box-shadow: rgb(99 99 99 / 12%) 0px 2px 8px 0px;
+    padding: 25px 30px;
+    border-radius: 20px;
+    height: 100%;
+}
+.login-form
+{
+    height: 88%;
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
+.password a
+{
+    color: #B4B4B4;
+    position: absolute;
+    top: 15px;
+    right: 20px;
+    font-size: 22px;
+    line-height: normal;
+}
+.forgot-password a
+{
+    font-size: 17px;
+    text-decoration: underline;
+    color: var(--primary-color);
+}
+.login-form .contact-form-inner input
+{
+    padding: 15px 20px;
+    border-radius: 80px;
+}
+.contact-form form a.btn-default
+{
+    width: 100%;
+    text-align: center;
 }
